# fossil-lib

./: LICENSE  README.md  meson.build
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: meson_ci.yml
code/logic/: arguments.c  command.c  exit.c  hostsys.c  memory.c  meson.build  regex.c
code/logic/fossil/lib/: arguments.h  cnullptr.h  command.h  exit.h  framework.h  hostsys.h  memory.h  regex.h
code/tests/: meson.build  test_arguments.c  test_cnullptr.c  test_command.c  test_hostsys.c  test_memory.c  test_regex.c
code/tests/cases/: test_arguments.c  test_arguments.cpp  test_cnullptr.c  test_cnullptr.cpp  test_command.c  test_command.cpp  test_hostsys.c  test_hostsys.cpp  test_memory.c  test_memory.cpp
subprojects/: fossil-test.wrap
